:recycles: refactor duplication of keyword